--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<h1> Theresa dela Vega </h1>
 		<h2> Sr. Operations Manager </h2>
-		<img src = "images/image2.jpg" alt= "Yoshi on a suitcase!" width = "300">
+		<img src = "images/image2.JPG" alt= "Yoshi on a suitcase!" width = "300">
 	<h3> About Me </h3>
 		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
